--- a/APPS/Task2/CMakeLists.txt
+++ b/APPS/Task2/CMakeLists.txt
@@ -17,13 +17,13 @@ set(CMAKE_MACROS_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/../../COTS/CMAKE")
 include(${CMAKE_MACROS_PATH}/hex.cmake)
 include(${CMAKE_MACROS_PATH}/flash.cmake)
 cmake_minimum_required(VERSION 3.11.0)
-project(led_ctl C)
-add_executable(led_ctl "${CMAKE_CURRENT_SOURCE_DIR}/src/LED_CTL.c")
+project(Binary_Counter C)
+add_executable(Binary_Counter "${CMAKE_CURRENT_SOURCE_DIR}/src/Binary_Counter.c")
 add_subdirectory(${LIB_PATH}  "${CMAKE_BINARY_DIR}/DIO")
-target_link_libraries(led_ctl PRIVATE DIO_lib)
+target_link_libraries(Binary_Counter PRIVATE DIO_lib)
 
-generate_hex("led_ctl" "led_ctl")
+generate_hex("Binary_Counter" "bin_count")
 
 if(HW STREQUAL "ON")
-    flash("led_ctl" "led_ctl")
+    flash("Binary_Counter" "bin_count")
 endif()
