LED and SWITCH drivers

--- a/APPS/Task5/CMakeLists.txt
+++ b/APPS/Task5/CMakeLists.txt
@@ -11,24 +11,23 @@ set(CMAKE_CXX_FLAGS "-mmcu=atmega32 -Wall -Os")
 set(CMAKE_EXE_LINKER_FLAGS "-mmcu=atmega32")
 set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
 
-set(PORT_LIB_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../COTS/MCAL/PORT")
-set(DIO_LIB_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../COTS/MCAL/DIO")
+set(HAL_LIBS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../COTS/HAL")
 set(CMAKE_MACROS_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/../../COTS/CMAKE")
 
 include(${CMAKE_MACROS_PATH}/hex.cmake)
 include(${CMAKE_MACROS_PATH}/flash.cmake)
+
 cmake_minimum_required(VERSION 3.11.0)
-project(test_leds C)
-add_executable(test_leds "${CMAKE_CURRENT_SOURCE_DIR}/src/test_leds.c")
-add_subdirectory(${PORT_LIB_PATH}  "${CMAKE_BINARY_DIR}/PORT")
-add_subdirectory(${DIO_LIB_PATH}  "${CMAKE_BINARY_DIR}/DIO")
-target_link_libraries(test_leds 
-    PRIVATE DIO_lib
-    PRIVATE PORT_lib    
+project(hal_test C)
+
+add_executable(hal_test "${CMAKE_CURRENT_SOURCE_DIR}/src/hal_test.c")
+add_subdirectory(${HAL_LIBS_PATH}  "${CMAKE_BINARY_DIR}/HAL_LIBS")
+
+target_link_libraries(hal_test 
+    PRIVATE HAL_lib
     )
-    
-generate_hex("test_leds" "leds")
+generate_hex("hal_test" "leds_test")
 
 if(HW STREQUAL "ON")
-    flash("test_leds" "leds")
+    flash("hal_test" "leds_test")
 endif()
